--- a/wiki/it/Macro_Image_Scaling.html
+++ b/wiki/it/Macro_Image_Scaling.html
@@ -83,14 +83,11 @@ Scala immagine
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Utilizzo_2">Utilizzo</span></h2>
 <ul><li>avviare la Macro - appare un dialogo</li>
-<li>cliccare nell'immagine sui due punti di cui si conosce la vera distanza</li>
+<li>cliccare nell'immagine sui due punti di cui si conosce la distanza vera</li>
 <li>Selezionare il piano dell'immagine nella vista ad albero</li>
-<li>Inserire in mm la vera distanza tra i punti nel campo di testo del dialogo e fare clic su OK</li>
+<li>Inserire in mm la distanza vera tra i punti nel campo di testo del dialogo e fare clic su OK</li>
 <li>L'immagine viene ridimensionata e il dialogo si chiude.</li></ul>
-</div>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Image_Scaling.svg&amp;filetimestamp=20181206021928&amp;.html" class="mw-file-description"><img src="../File/Image_Scaling.svg" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
@@ -235,13 +232,13 @@ ui.setupUi(d)</pre>
 <li><a rel="nofollow" class="external text" href="https://youtu.be/2iFE40uHrA8">Movie created by microelly2</a></li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260120105217
+Cached time: 20260120105254
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.055 seconds
-Preprocessor visited node count: 100/1000000
+CPU time usage: 0.033 seconds
+Real time usage: 0.052 seconds
+Preprocessor visited node count: 96/1000000
 Post&#8208;expand include size: 1902/2097152 bytes
 Template argument size: 5930/2097152 bytes
 Highest expansion depth: 5/100
@@ -251,12 +248,12 @@ Unstrip post&#8208;expand size: 6777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.486      1 -total
- 54.10%    3.509      1 Template:Macro/it
- 43.99%    2.853      1 Template:MacroCode
+100.00%    5.600      1 -total
+ 61.12%    3.423      1 Template:Macro/it
+ 37.05%    2.075      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:63612-0!canonical and timestamp 20260120105217 and revision id 1741531. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:63612-0!canonical and timestamp 20260120105254 and revision id 1741533. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
