--- a/wiki/it/Macro_Image_Scaling.html
+++ b/wiki/it/Macro_Image_Scaling.html
@@ -76,7 +76,7 @@ Scala immagine
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <p>Macro per scalare disegni, grafici, schemi, modelli e immagini 2D simili nell'ambiente Immagine. Funziona per figure importate come immagini planari nello spazio 3D.
-</p><p>Notare: Per le foto di oggetti o immagini coinvolgenti oggetti giacenti a distanze diverse dal punto di vista,, si deve tenere presente l'effetto di <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Parallax">Parallasse</a> (distorsione dovuta a "differenza nella posizione apparente di un oggetto osservato lungo due diverse linee di vista"). Nello schema seguente i 2 oggetti blu sono complanari con il piano perpendicolare al punto di vista dell'utente e possono essere scalati:
+</p><p>Notare: Per le foto di oggetti o immagini coinvolgenti oggetti giacenti a distanze diverse dal punto di vista, si deve tenere presente dell'effetto di <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Parallax">Parallasse</a> (distorsione dovuta a "differenza nella posizione apparente di un oggetto osservato lungo due diverse linee di vista"). Nello schema seguente i 2 oggetti blu sono complanari con il piano perpendicolare al punto di vista dell'utente e possono essere scalati:
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Perspective.png&amp;filetimestamp=20160118222402&amp;.html" class="mw-file-description"><img src="../File/Perspective.png" decoding="async" width="355" height="265" class="mw-file-element" data-file-width="355" data-file-height="265"></a></span>
 </p><p>Nella seconda figura, gli oggetti rossi e verdi non sono complanari con i 2 oggetti blu e quindi non possono essere scalati. Inoltre, con un solo punto di vista dell'utente non si pu&ograve; stabilire con certezza che l'oggetto rosso &egrave; complanare con 1 oggetto blu:
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Parallax.jpg&amp;filetimestamp=20160119154927&amp;.html" class="mw-file-description"><img src="../File/Parallax.jpg" decoding="async" width="361" height="272" class="mw-file-element" data-file-width="361" data-file-height="272"></a></span>   
@@ -229,12 +229,12 @@ ui.setupUi(d)</pre>
 <li><a rel="nofollow" class="external text" href="https://youtu.be/2iFE40uHrA8">Movie created by microelly2</a></li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260120105306
+Cached time: 20260120105353
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.047 seconds
+CPU time usage: 0.036 seconds
+Real time usage: 0.054 seconds
 Preprocessor visited node count: 95/1000000
 Post&#8208;expand include size: 1902/2097152 bytes
 Template argument size: 5930/2097152 bytes
@@ -245,12 +245,12 @@ Unstrip post&#8208;expand size: 6781/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.060      1 -total
- 61.80%    3.127      1 Template:Macro/it
- 35.93%    1.818      1 Template:MacroCode
+100.00%    7.662      1 -total
+ 62.05%    4.754      1 Template:Macro/it
+ 36.07%    2.764      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:63612-0!canonical and timestamp 20260120105306 and revision id 1741535. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:63612-0!canonical and timestamp 20260120105353 and revision id 1741537. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
