--- a/wiki/it/Macro_WorkFeatures.html
+++ b/wiki/it/Macro_WorkFeatures.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro WorkFeatures/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+WorkFeatures&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_WorkFeatures.html" class="mw-pt-progress mw-pt-progress--high" title="Makro ArbeitsFunktionen (87% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_WorkFeatures.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro ArbeitsFunktionen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_WorkFeatures.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro WorkFeatures (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_WorkFeatures.html" class="mw-pt-progress mw-pt-progress--high" title="Macro WorkFeatures (87% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_WorkFeatures.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro WorkFeatures (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_WorkFeatures.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: W&#322;a&#347;ciwo&#347;ci u&#380;ytkowe (2% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Macro_WorkFeatures.html" class="mw-pt-progress mw-pt-progress--low" title="Macro WorkFeatures/ru (2% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
@@ -258,12 +258,8 @@ WorkFeatures
 </p><p>Icona barra strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=WF_wf.png&amp;filetimestamp=20150308174307&amp;.html" class="mw-file-description"><img src="../File/WF_wf.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p><p><b><a rel="nofollow" class="external text" href="https://github.com/Rentlau/WorkFeature">Download the latest version on GitHub</a></b> , 
 &egrave; necessario decomprimerlo e copiare tutti i file nella directory delle macro di FreeCAD.
-</p>
-<div class="mw-translate-fuzzy">
-<p><b>Nota: Questa macro &egrave; ancora in fase di sviluppo si prega di visitare questa pagina per essere sicuri di avere l'ultima versione.</b>
-</p>
-</div>
-<p><br>
+</p><p><b>P.S.: Questa macro &egrave; ancora in fase di sviluppo. Visitare regolarmente questa pagina per assicurarsi di avere la versione pi&ugrave; recente.</b>
+</p><p><br>
 </p>
 <figure class="mw-halign-center" typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_GitHub_00.png&amp;filetimestamp=20160917094640&amp;.html" class="mw-file-description" title="Download in GitHub click the Download ZIP button"><img alt="Download in GitHub click the Download ZIP button" src="../File/Macro_Work_Features_GitHub_00.png" decoding="async" width="640" height="415" class="mw-file-element" data-file-width="1060" data-file-height="687"></a><figcaption>Download in GitHub click the Download ZIP button</figcaption></figure>
 <div style="clear:both"></div>
@@ -453,34 +449,34 @@ Spessore &egrave; la larghezza del piano di taglio.
 
 <!-- 
 NewPP limit report
-Cached time: 20260117220357
+Cached time: 20260120105533
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.169 seconds
-Real time usage: 0.791 seconds
-Preprocessor visited node count: 731/1000000
+CPU time usage: 0.146 seconds
+Real time usage: 0.200 seconds
+Preprocessor visited node count: 730/1000000
 Post&#8208;expand include size: 25684/2097152 bytes
 Template argument size: 3110/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 21864/5000000 bytes
+Unstrip post&#8208;expand size: 21874/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  450.973      1 -total
-  4.76%   21.485      1 Template:Userdocnavi/it
-  4.20%   18.963     11 Template:Clear
-  2.86%   12.892      1 Template:Navigation_menu_2
-  1.96%    8.851      1 Template:Button
-  1.90%    8.588      1 Template:MenuCommand
-  1.75%    7.890      1 Template:Caption
-  1.57%    7.099      1 Template:Macro/it
-  1.09%    4.894     54 Template:KEY
+100.00%  101.862      1 -total
+  6.20%    6.313      1 Template:Userdocnavi/it
+  3.36%    3.423      1 Template:Macro/it
+  2.97%    3.022     54 Template:KEY
+  2.76%    2.809      1 Template:Navigation_menu_2
+  2.68%    2.733     11 Template:Clear
+  2.27%    2.317      1 Template:Caption
+  1.95%    1.990      1 Template:MenuCommand
+  1.53%    1.555      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53774-0!canonical and timestamp 20260117220357 and revision id 1739713. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53774-0!canonical and timestamp 20260120105533 and revision id 1741539. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
