--- a/wiki/it/Macro_WorkFeatures.html
+++ b/wiki/it/Macro_WorkFeatures.html
@@ -263,11 +263,8 @@ WorkFeatures
 </p>
 <figure class="mw-halign-center" typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_GitHub_00.png&amp;filetimestamp=20160917094640&amp;.html" class="mw-file-description" title="Download in GitHub click the Download ZIP button"><img alt="Download in GitHub click the Download ZIP button" src="../File/Macro_Work_Features_GitHub_00.png" decoding="async" width="640" height="415" class="mw-file-element" data-file-width="1060" data-file-height="687"></a><figcaption>Download in GitHub click the Download ZIP button</figcaption></figure>
 <div style="clear:both"></div>
-<div class="mw-translate-fuzzy">
-<p>Utilizzare <span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Std_AddonMgr.html" title="Std AddonMgr/it">Addon manager</a>, <b>Menu &rarr; Strumenti &rarr; Addon manager</b> per una facile installazione di WorkFeatures e altre macro interessanti
-</p>
-</div>
-<p>Per informazioni dettagliate vedere la pagina <a href="../it/How_to_install_macros.html" title="How to install macros/it">Come installare le Macro</a>
+<p>Utilizzare <span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Std_AddonMgr.html" title="Std AddonMgr/it">Addon manager</a>, <b>Menu &rarr; Strumenti &rarr; Addon manager</b> per una facile installazione di WorkFeatures e altre macro interessanti.
+</p><p>Per informazioni dettagliate vedere la pagina <a href="../it/How_to_install_macros.html" title="How to install macros/it">Come installare le Macro</a>
 </p><p><span id="Examples"></span>
 </p>
 <h2><span class="mw-headline" id="Esempi">Esempi</span></h2>
@@ -449,13 +446,13 @@ Spessore &egrave; la larghezza del piano di taglio.
 
 <!-- 
 NewPP limit report
-Cached time: 20260120105533
+Cached time: 20260120105545
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.146 seconds
+CPU time usage: 0.151 seconds
 Real time usage: 0.200 seconds
-Preprocessor visited node count: 730/1000000
+Preprocessor visited node count: 729/1000000
 Post&#8208;expand include size: 25684/2097152 bytes
 Template argument size: 3110/2097152 bytes
 Highest expansion depth: 5/100
@@ -465,18 +462,18 @@ Unstrip post&#8208;expand size: 21874/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  101.862      1 -total
-  6.20%    6.313      1 Template:Userdocnavi/it
-  3.36%    3.423      1 Template:Macro/it
-  2.97%    3.022     54 Template:KEY
-  2.76%    2.809      1 Template:Navigation_menu_2
-  2.68%    2.733     11 Template:Clear
-  2.27%    2.317      1 Template:Caption
-  1.95%    1.990      1 Template:MenuCommand
-  1.53%    1.555      1 Template:Button
+100.00%  112.449      1 -total
+  5.83%    6.556     54 Template:KEY
+  4.46%    5.010      1 Template:Userdocnavi/it
+  2.37%    2.662      1 Template:Macro/it
+  2.01%    2.261      1 Template:Navigation_menu_2
+  1.98%    2.232     11 Template:Clear
+  1.36%    1.524      1 Template:Caption
+  1.29%    1.445      1 Template:MenuCommand
+  1.16%    1.309      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53774-0!canonical and timestamp 20260120105533 and revision id 1741539. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53774-0!canonical and timestamp 20260120105544 and revision id 1741541. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
