--- a/wiki/it/Macro_WorkFeatures.html
+++ b/wiki/it/Macro_WorkFeatures.html
@@ -409,12 +409,8 @@ Spessore &egrave; la larghezza del piano di taglio.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=WF_wf.png&amp;filetimestamp=20150308174307&amp;.html" class="mw-file-description"><img src="../File/WF_wf.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> 
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=WF_centerObjectsPlanes.png&amp;filetimestamp=20141225171322&amp;.html" class="mw-file-description"><img src="../File/WF_centerObjectsPlanes.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p><p><b>Sorgenti:</b>
-</p>
-<div class="mw-translate-fuzzy">
-<p>Su github&nbsp;: <a rel="nofollow" class="external text" href="https://github.com/Rentlau/WorkFeature-WB.git">/github.com/Rentlau/WorkFeature-WB.git</a>
-</p>
-</div>
-<p>Data 2019-05-01 (YYYY-MM-DD)
+</p><p>Su GitHub&nbsp;: <a rel="nofollow" class="external text" href="https://github.com/Rentlau/WorkFeature-WB.git">/github.com/Rentlau/WorkFeature-WB.git</a>
+</p><p>Data 2019-05-01 (YYYY-MM-DD)
 </p><p>20/01/2019
 </p><p>08/03/2015: <a rel="nofollow" class="external text" href="http://github.com/Rentlau/WorkFeature.git">WF_2015_03_08</a>
 - Circle cut added
@@ -446,13 +442,13 @@ Spessore &egrave; la larghezza del piano di taglio.
 
 <!-- 
 NewPP limit report
-Cached time: 20260120105545
+Cached time: 20260120105606
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.151 seconds
-Real time usage: 0.200 seconds
-Preprocessor visited node count: 729/1000000
+CPU time usage: 0.141 seconds
+Real time usage: 0.166 seconds
+Preprocessor visited node count: 728/1000000
 Post&#8208;expand include size: 25684/2097152 bytes
 Template argument size: 3110/2097152 bytes
 Highest expansion depth: 5/100
@@ -462,18 +458,18 @@ Unstrip post&#8208;expand size: 21874/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  112.449      1 -total
-  5.83%    6.556     54 Template:KEY
-  4.46%    5.010      1 Template:Userdocnavi/it
-  2.37%    2.662      1 Template:Macro/it
-  2.01%    2.261      1 Template:Navigation_menu_2
-  1.98%    2.232     11 Template:Clear
-  1.36%    1.524      1 Template:Caption
-  1.29%    1.445      1 Template:MenuCommand
-  1.16%    1.309      1 Template:Button
+100.00%   85.134      1 -total
+  6.02%    5.127      1 Template:Userdocnavi/it
+  3.50%    2.978     54 Template:KEY
+  2.80%    2.384     11 Template:Clear
+  2.74%    2.332      1 Template:Navigation_menu_2
+  2.55%    2.170      1 Template:Macro/it
+  2.03%    1.725      1 Template:MenuCommand
+  1.84%    1.570      1 Template:Caption
+  1.71%    1.454      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53774-0!canonical and timestamp 20260120105544 and revision id 1741541. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53774-0!canonical and timestamp 20260120105605 and revision id 1741543. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
