--- a/wiki/it/Macro_Section.html
+++ b/wiki/it/Macro_Section.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Section/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Section&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/Macro_Section.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Schnittkurve (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Section.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Section (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_Section.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Section (62% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_Section.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Section (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Macro_Section.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Section (62% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Section.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Przekr&oacute;j (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
@@ -79,12 +79,11 @@ Sezione
 </p><p>Lo strumento <a href="../it/Part_Section.html" title="Part Section/it">Part Sezione</a> produce dei bordi discontinui e gran numero di segmenti (nodi), e questo non &egrave; molto adatto per il percorso di <a href="../it/Part_Sweep.html" title="Part Sweep/it">Sweep</a>.
 </p><p>Questa macro fa la stessa cosa estraendo i bordi della sezione dal risultato di una fusione generale (GFA). Il risultato &egrave; pi&ugrave; continuo e ha meno nodi. Non &egrave; ancora perfetto per lo sweep, ma il risultato &egrave; pi&ugrave; soddisfacente che utilizzando semplicemente la Sezione di Part.
 </p><p>Richiede FreeCAD v0.17+ built against OCC no less than 6.9.0 (testato con 7.0.0).
+</p><p><span id="Installation"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Installation">Installation</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Installazione">Installazione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Installazione_2">Installazione</span></h2>
 <p>Scaricare questo file e salvarlo nella directory delle macro:
 </p>
 </div>
@@ -268,28 +267,28 @@ def run():
         mb.exec_()</pre>
 <!-- 
 NewPP limit report
-Cached time: 20251023170616
+Cached time: 20260120123328
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.066 seconds
-Real time usage: 0.080 seconds
+CPU time usage: 0.040 seconds
+Real time usage: 0.136 seconds
 Preprocessor visited node count: 98/1000000
 Post&#8208;expand include size: 1906/2097152 bytes
 Template argument size: 6550/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 7465/5000000 bytes
+Unstrip post&#8208;expand size: 7471/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.504      1 -total
- 61.85%    3.404      1 Template:Macro/it
- 34.74%    1.912      1 Template:MacroCode
+100.00%   12.547      1 -total
+ 54.65%    6.857      1 Template:MacroCode
+ 44.38%    5.568      1 Template:Macro/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:73728-0!canonical and timestamp 20251023170616 and revision id 1675517. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:73728-0!canonical and timestamp 20260120123327 and revision id 1741547. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
