--- a/wiki/it/Macro_Section.html
+++ b/wiki/it/Macro_Section.html
@@ -3,7 +3,7 @@
 <li><a href="../Macro_Section.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Section (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Section.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Section (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Macro_Section.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Section (62% translated)" lang="hr" dir="ltr">hrvatski</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Section.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Przekr&oacute;j (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <p>(parametrico!)
 </p>
@@ -82,16 +82,11 @@ Sezione
 </p><p><span id="Installation"></span>
 </p>
 <h2><span class="mw-headline" id="Installazione">Installazione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Installazione_2">Installazione</span></h2>
-<p>Scaricare questo file e salvarlo nella directory delle macro:
+<p>Scaricare questo file e salvarlo nella cartella delle macro:
+</p><p><a rel="nofollow" class="external free" href="https://github.com/DeepSOIC/FreeCAD-Macros/raw/master/Section/MacroSection.py">https://github.com/DeepSOIC/FreeCAD-Macros/raw/master/Section/MacroSection.py</a>
+</p><p><span id="How_to_use"></span>
 </p>
-</div>
-<p><a rel="nofollow" class="external free" href="https://github.com/DeepSOIC/FreeCAD-Macros/raw/master/Section/MacroSection.py">https://github.com/DeepSOIC/FreeCAD-Macros/raw/master/Section/MacroSection.py</a>
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="How_to_use">How to use</span></h2>
-</div>
+<h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Uso:">Uso:</span></h2>
 <ol><li>Selezionare due forme</li>
@@ -267,28 +262,28 @@ def run():
         mb.exec_()</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260120123328
+Cached time: 20260120123337
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.040 seconds
-Real time usage: 0.136 seconds
-Preprocessor visited node count: 98/1000000
+CPU time usage: 0.038 seconds
+Real time usage: 0.081 seconds
+Preprocessor visited node count: 94/1000000
 Post&#8208;expand include size: 1906/2097152 bytes
 Template argument size: 6550/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 7471/5000000 bytes
+Unstrip post&#8208;expand size: 7472/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.547      1 -total
- 54.65%    6.857      1 Template:MacroCode
- 44.38%    5.568      1 Template:Macro/it
+100.00%    9.415      1 -total
+ 52.36%    4.930      1 Template:MacroCode
+ 45.05%    4.241      1 Template:Macro/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:73728-0!canonical and timestamp 20260120123327 and revision id 1741547. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:73728-0!canonical and timestamp 20260120123337 and revision id 1741551. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
