--- a/wiki/it/Macro_Section.html
+++ b/wiki/it/Macro_Section.html
@@ -3,7 +3,7 @@
 <li><a href="../Macro_Section.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Section (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Section.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Section (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Macro_Section.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Section (62% translated)" lang="hr" dir="ltr">hrvatski</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Section.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Przekr&oacute;j (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <p>(parametrico!)
 </p>
@@ -92,11 +92,8 @@ Sezione
 <p>Dopo aver eseguito la macro una volta, puoi aggiungere un pulsante della barra degli strumenti. Vai su Strumenti &rarr; Personalizza, Barre degli strumenti, seleziona MacroSelezione nell'elenco a discesa a sinistra e aggiungi il comando a una qualsiasi delle tue barre degli strumenti personalizzate.
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Part_Section.svg&amp;filetimestamp=20240712183658&amp;.html" class="mw-file-description"><img src="../File/Part_Section.svg" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>MacroSection.py</b>
+<p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Part_Section.svg&amp;filetimestamp=20240712183658&amp;.html" class="mw-file-description"><img src="../File/Part_Section.svg" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>MacroSection.py</b>
 </p>
 <pre>#***************************************************************************
 #*                                                                         *
@@ -259,28 +256,28 @@ def run():
         mb.exec_()</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260120123345
+Cached time: 20260120123625
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.032 seconds
-Real time usage: 0.053 seconds
-Preprocessor visited node count: 90/1000000
+CPU time usage: 0.034 seconds
+Real time usage: 0.083 seconds
+Preprocessor visited node count: 89/1000000
 Post&#8208;expand include size: 1906/2097152 bytes
 Template argument size: 6550/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 7472/5000000 bytes
+Unstrip post&#8208;expand size: 7476/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.868      1 -total
- 52.54%    3.083      1 Template:Macro/it
- 45.42%    2.665      1 Template:MacroCode
+100.00%    9.108      1 -total
+ 52.76%    4.805      1 Template:Macro/it
+ 44.63%    4.065      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:73728-0!canonical and timestamp 20260120123345 and revision id 1741553. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:73728-0!canonical and timestamp 20260120123624 and revision id 1741555. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
